--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,9 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+
+.separator {
+    border-top: 5px dashed #1f1f1f;
+    margin-top: 10px;
+}
