News fully ok - Profile view ok - MyProfile edit almost ok

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,8 @@
     border-top: 5px dashed #1f1f1f;
     margin-top: 10px;
 }
+
+.nav-item.active .nav-link {
+    font-weight: bold;
+    color: #0d6efd;
+}
